# Efficient-Transport-Network-Design-with-Quantum-Annealing

./: EfficientTransportNetwork.ipynb  README.md  metro_planning.py  pyproject.toml
demo/: efficient_transport_network.ipynb
src/efficient_network/: __init__.py  assignment_of_lines.py  avg_path_length.py  connected_network_with_minimal_length.py  location_selection.py  partition_of_stations.py  transfer_frequency_genetic.py
src/efficient_network.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
